[package]
name = "navmesh_builder"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
license = "AGPL-3.0-or-later"

[dependencies]
anyhow.workspace = true
async-trait = "0.1.88"
base64.workspace = true
clap.workspace = true
console = "0.16.1"
env_logger.workspace = true
futures.workspace = true
glam = "0.30.10"
indicatif.workspace = true
log.workspace = true
nom.workspace = true
once_cell.workspace = true
pepkg = { version = "0.1.0", path = "../../lib/pepkg" }
plexus = { git = "https://github.com/AnotherlandServer/plexus.git", version = "0.0.11", features = ["geometry-glam"] }
rayon = "1.10.0"
realm_api = { version = "0.1.0", path = "../../lib/realm_api" }
recastnavigation-rs = { workspace = true }
sqlite = "0.37.0"
theon = { version = "0.2.0", features = ["glam"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
toolkit = { version = "0.1.0", path = "../../lib/toolkit" }
upk = { version = "0.1.0", path = "../../lib/upk" }
url = "2.5.8"
