[package]
name = "seed-realm"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
log = "0.4.22"
once_cell = "1.20.2"
realm_api = { version = "0.1.0", path = "../../lib/realm_api" }
reqwest = "0.12.9"
sqlite = "0.36.1"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
toolkit = { version = "0.1.0", path = "../../lib/toolkit" }
