[package]
name = "seed-realm"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
indicatif = { version = "0.17.9", features = ["tokio"] }
indicatif-log-bridge = "0.2.3"
log = "0.4.22"
obj_params = { version = "0.1.0", path = "../../lib/obj_params" }
once_cell = "1.20.2"
realm_api = { version = "0.1.0", path = "../../lib/realm_api" }
reqwest = "0.12.9"
sqlite = "0.36.1"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
toolkit = { version = "0.1.0", path = "../../lib/toolkit" }
