[package]
name = "seed-realm"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
clap = { workspace = true }
indicatif = { version = "0.17.9", features = ["tokio"] }
indicatif-log-bridge = "0.2.3"
log = { workspace = true }
obj_params = { workspace = true }
once_cell = { workspace = true }
realm_api = { workspace = true }
reqwest = { workspace = true }
sqlite = "0.36.1"
thiserror = { workspace = true }
tokio = { workspace = true }
toolkit = { workspace = true }
