[package]
name = "update-bindings"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[dependencies]
convert_case = "0.6.0"
itertools = "0.13.0"
nom = "7.1.3"
prettyplease = "0.2.25"
proc-macro2 = "1.0.92"
quote = "1.0.37"
regex = "1.11.1"
syn = "2.0.105"
toml = "0.9.5"
uuid = "1.11.0"
