[package]
name = "update-bindings"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
license = "GPL-3.0-or-later"

[dependencies]
convert_case = "0.6.0"
itertools = "0.14.0"
nom = "8.0.0"
prettyplease = "0.2.37"
proc-macro2 = "1.0.92"
quote = "1.0.41"
regex = "1.11.3"
syn = "2.0.105"
toml = "0.9.5"
uuid = "1.18.1"
